Tue Jul 15 00:11:02 2003  Joern Thyssen  <jth@gnubg.org>

	* rollout.c (GeneralCubeDecisionR): fix bug leading to wrong
	cube decision rollouts.

Sun Jul 13 22:24:12 2003  Joern Thyssen  <jth@gnubg.org>

	* text.c (OutputMoveFilterPly): add a newline
	* text.c (OutputEvalContextsForRollout): fix some indentation
	problems.

Sun Jul 13 20:02:12 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c (PythonPositionID, PythonPositionFromID,
	PythonPositionFromBearoff, PythonPositionBearoff): new functions.

Sun Jul 13 18:17:05 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* make sure rollouts skip completed trials without wasting time
		
Sun Jul 13 19:49:16 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.py: new file (read during startup).


Sun Jul 13 19:17:27 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkchequer.c (MoveListRollout): call HandleXAction.

Sun Jul 13 12:06:05 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c (CommandRollout): fix some non-ANSI decls.
	* configure.in: new autoconf magic for python
	* gnubg.c (real_main, usage): new option -p.

Sun Jul 13 02:17:05 GMT 2003 Jim Segrave <jes@jes-2.demon.nl>

	* eval.c, eval.h, export.h, gnubg.c, gtkchequer.c, gtkcube.c
	  gtkgame.c, guile.c, html.c, play.c, rollout.c, rollout.h, sgf.c
	  text.c - change rollout handling to support extending rollouts
	  and 'parallel' rollouts of multiple moves
	
Sat Jul 12 19:58:53 2003  Joern Thyssen  <jth@gnubg.org>

	* gnubgmodule.c: change board from typle to list.

Sat Jul 12 15:27:04 2003  Joern Thyssen  <jth@gnubg.org>

	Add Python support for gnubg.

	* gnubg.c: support for Python.
	* gnubgmodule.c: new file: python support for gnubg.

Sat Jul 12 10:11:00 2003  Joern Thyssen  <jth@gnubg.org>

	* gtkgame.c (EvalWidget): ugly fix for problematic string.

Sat Jul 12 01:25:24 2003  Joern Thyssen  <jth@gnubg.org>

	* Makefile.am, configure.in: check for python

Fri Jul 11 20:48:34 2003  Joern Thyssen  <jth@gnubg.org>

	* path.c (PathOpen, PathSearch): use DIR_SEPARATOR as